# haskellbook

./: .gitignore  README.md
02/: learn.hs  waxon.hs
03/: print3flipped.hs
03/05/maor/: ch3exercises.hs  ch3reverse.hs  print2.hs  print3  print3.hs  print3broken.hs  print3flipped.hs
03/08/chad/: ReturnThird.hs  Rvrs.hs
04/: ExTen.hs
04/02/chad/: ChangeMood.hs
04/03/chad/: ChangeMood.hs
04/07/maor/: ch4exercises.hs
04/09/chad/: AbsoluteVal.hs  IsPalindrome.hs
04/09/maor/: greetIfCool1.hs
05/: Parametricity55a.hs
05/05/chad/: Parametricity55c.hs
05/09/chad/: Arith3Broken59.hs  TypeExercises59.hs
05/09/maor/: applyYourself.hs  arith3broken.hs  ch5Exercises.hs  sing.hs  typeKwonDo.hs
06/14/maor/: eqinstances.hs
07/03/chad/: GrabBag.hs
07/04/chad/: VarietyPack.hs
07/05/chad/: CasePractice.hs
07/05/maor/: artfulDodgy.hs  caseExpressions.hs  grabbag.hs  guardDuty.hs  higherOrder.hs  registeredUser2.hs  varietyPack.hs
07/11/: ch7exercises.hs
07/11/maor/: arith4.hs  ch7exercises.hs
08/06/eric/: WordNumber.hs  (+1 more)
14/05/eric/morse/: morse.cabal  stack.yaml
14/05/eric/morse/src/: Main.hs  Morse.hs
14/05/eric/morse/test/: tests.hs
ch02/: FunctionWithLambda.hs  FunctionWithWhere.hs  practice.hs
ch03/: Global.hs  print3.hs  print3broken.hs  testexec  testexec.hs
ch04/: ChangeMood.hs  SyntaxOne.hs  SyntaxTwo.hs  TypeConstructorTest.hs
ch05/: Currying.hs  ManualCurryAndUncurry.hs  Parametricity55b.hs  TestTypes.hs  TypeExercises59.hs  TypeExercises59Sing.hs
ch06/14/: MatchTheTypes.hs
misc/: OptParseExample  OptParseExample.hs
(+145 files in other folders)
